make sure stat blocks dont get unreadably squished

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -64,6 +64,7 @@ strong{
 .stat-box{
   flex: 0 0 auto;
   width: 30%;
+  min-width: 160px;
   display: flex;
   height: 40px;
   margin: 7px;
